--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kaliop/ezobjectwrapperbundle",
+    "name": "datafactory/ezobjectwrapperbundle",
     "type": "symfony-bundle",
     "description": "Easy wrappers for your eZPublish 5 content/location objects",
     "license": "GPL-2.0",
@@ -18,6 +18,9 @@
         "symfony/phpunit-bridge": "*",
         "codeclimate/php-test-reporter": "~0.4",
         "kaliop/ezmigrationbundle": "~3.1.0"
+    },
+    "replace": {
+        "kaliop/ezobjectwrapperbundle": "*"
     },
     "autoload": {
         "psr-4": {"Kaliop\\eZObjectWrapperBundle\\": "WrapperBundle"}
